fixing spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -6249,7 +6249,7 @@ button.bg-danger:focus {
 }
 
 .bg-light {
-  background-color: #f8f9fa !important;
+  background: linear-gradient(to bottom, #000000 0%, rgba(0, 0, 0, 0.9) 75%, rgba(0, 0, 0, 0.8) 100%);
 }
 
 a.bg-light:hover, a.bg-light:focus,
@@ -10265,7 +10265,7 @@ body {
 }
 
 .projects-section {
-  background: linear-gradient(to bottom, #000000 0%, rgba(0, 0, 0, 0.9) 75%, rgba(0, 0, 0, 0.8) 100%);
+  
   padding: 10rem 0;
 }
 .projects-section .featured-text {
